# Music_app

./: Music_app.slnx  README.md
Music_app/: CMakeLists.txt  Music_app.cpp  Music_app.h  Music_app.qrc  Music_app.ui  Music_app.vcxproj  Music_app.vcxproj.filters  README.md  addsongdialog.cpp  addsongdialog.h  main.cpp  song.h
